新增登陆页面 调整sopconfig文件
[提交原因]
[详细描述]
[Bug ID]
[Bug 原因]
[解决方法]
[其它]

--- a/linkDood/linkdoodui/images.qrc
+++ b/linkDood/linkdoodui/images.qrc
@@ -1,5 +1,7 @@
 <RCC>
     <qresource prefix="/">
         <file>res/linkdoodui.png</file>
+        <file>res/logo.png</file>
+        <file>res/more.png</file>
     </qresource>
 </RCC>
