添加头像控件
[提交原因]
新功能
[详细描述]
添加联系人头像显示控件

--- a/linkDood/linkdoodui/images.qrc
+++ b/linkDood/linkdoodui/images.qrc
@@ -7,5 +7,6 @@
         <file>res/icon-contact.png</file>
         <file>res/icon-message-h.png</file>
         <file>res/icon-message.png</file>
+        <file>res/headerDefault.png</file>
     </qresource>
 </RCC>
