增加| 增加个人资料UI

--- a/linkDood/linkdoodui/images.qrc
+++ b/linkDood/linkdoodui/images.qrc
@@ -8,5 +8,6 @@
         <file>res/icon-message-h.png</file>
         <file>res/icon-message.png</file>
         <file>res/headerDefault.png</file>
+        <file>res/descbgtop.jpg</file>
     </qresource>
 </RCC>
