添加会话页面相关处理逻辑
[提交原因] 新功能
[详细描述]
1.添加页面跳转处理逻辑
2.添加会话页面
3.处理输入框

--- a/linkDood/linkdoodui/images.qrc
+++ b/linkDood/linkdoodui/images.qrc
@@ -9,5 +9,6 @@
         <file>res/icon-message.png</file>
         <file>res/headerDefault.png</file>
         <file>res/descbgtop.jpg</file>
+        <file>res/editBg.png</file>
     </qresource>
 </RCC>
