--- a/linkDood/linkdoodui/images.qrc
+++ b/linkDood/linkdoodui/images.qrc
@@ -10,5 +10,6 @@
         <file>res/headerDefault.png</file>
         <file>res/descbgtop.jpg</file>
         <file>res/editBg.png</file>
+        <file>res/exit.png</file>
     </qresource>
 </RCC>
