完善消息逻辑
[提交原因] 新功能
[详细描述]
1.添加消息界面处理
2.添加历史纪录查询逻辑

--- a/linkDood/linkdoodui/images.qrc
+++ b/linkDood/linkdoodui/images.qrc
@@ -11,5 +11,16 @@
         <file>res/descbgtop.jpg</file>
         <file>res/editBg.png</file>
         <file>res/exit.png</file>
+        <file>res/receive/message.png</file>
+        <file>res/receive/messageActive.png</file>
+        <file>res/receive/vidio_1.png</file>
+        <file>res/receive/vidio_2.png</file>
+        <file>res/receive/vidio_3.png</file>
+        <file>res/send/message.png</file>
+        <file>res/send/messageActive.png</file>
+        <file>res/send/vidio_1.png</file>
+        <file>res/send/vidio_2.png</file>
+        <file>res/send/vidio_3.png</file>
+        <file>res/sendfailed.png</file>
     </qresource>
 </RCC>
