--- a/linkDood/linkdoodui/images.qrc
+++ b/linkDood/linkdoodui/images.qrc
@@ -23,5 +23,10 @@
         <file>res/send/vidio_3.png</file>
         <file>res/sendfailed.png</file>
         <file>res/departLogo.png</file>
+        <file>res/arrow_icon.png</file>
+        <file>res/main_title_back_button_press.png</file>
+        <file>res/main_title_back_button.png</file>
+        <file>res/tab_personal_normal.png</file>
+        <file>res/tab_personal_pressed.png</file>
     </qresource>
 </RCC>
