修改登录界面，记住登录帐号等

--- a/linkDood/linkdoodui/qml.qrc
+++ b/linkDood/linkdoodui/qml.qrc
@@ -20,5 +20,6 @@
         <file>qml/CDoodSettingProfileDataPage.qml</file>
         <file>qml/IconButton.qml</file>
         <file>qml/UserProfileButton.qml</file>
+        <file>qml/CDoodWelcomePage.qml</file>
     </qresource>
 </RCC>
