联系人模块添加v标好友

--- a/linkDood/linkdoodui/qml.qrc
+++ b/linkDood/linkdoodui/qml.qrc
@@ -21,5 +21,6 @@
         <file>qml/IconButton.qml</file>
         <file>qml/UserProfileButton.qml</file>
         <file>qml/CDoodWelcomePage.qml</file>
+        <file>qml/CDoodPopWndLayer.qml</file>
     </qresource>
 </RCC>
