调整组织架构和好友在线状态更新

--- a/linkDood/linkdoodui/qml.qrc
+++ b/linkDood/linkdoodui/qml.qrc
@@ -22,5 +22,6 @@
         <file>qml/UserProfileButton.qml</file>
         <file>qml/CDoodWelcomePage.qml</file>
         <file>qml/CDoodPopWndLayer.qml</file>
+        <file>qml/IndicatorDialog.qml</file>
     </qresource>
 </RCC>
