增加修改密码激活帐号等

--- a/linkDood/linkdoodui/qml.qrc
+++ b/linkDood/linkdoodui/qml.qrc
@@ -23,5 +23,8 @@
         <file>qml/CDoodWelcomePage.qml</file>
         <file>qml/CDoodPopWndLayer.qml</file>
         <file>qml/IndicatorDialog.qml</file>
+        <file>qml/CDoodMailLoginPage.qml</file>
+        <file>qml/CDoodActivateAccountPage.qml</file>
+        <file>qml/CDoodChangePasswordPage.qml</file>
     </qresource>
 </RCC>
