添加表情ui显示支持

--- a/linkDood/linkdoodui/qml.qrc
+++ b/linkDood/linkdoodui/qml.qrc
@@ -27,5 +27,6 @@
         <file>qml/CDoodActivateAccountPage.qml</file>
         <file>qml/CDoodChangePasswordPage.qml</file>
         <file>qml/CDoodEmojiTabView.qml</file>
+        <file>qml/CDoodEmojiGridView.qml</file>
     </qresource>
 </RCC>
