静态表情支持

--- a/linkDood/linkdoodui/qml.qrc
+++ b/linkDood/linkdoodui/qml.qrc
@@ -28,5 +28,6 @@
         <file>qml/CDoodChangePasswordPage.qml</file>
         <file>qml/CDoodEmojiTabView.qml</file>
         <file>qml/CDoodEmojiGridView.qml</file>
+        <file>qml/CDoodDyEmojiGridView .qml</file>
     </qresource>
 </RCC>
