--- a/linkDood/linkdoodui/images.qrc
+++ b/linkDood/linkdoodui/images.qrc
@@ -86,5 +86,9 @@
         <file>res/chat_tool_takephoto_press.png</file>
         <file>res/chat_tool_takephoto_normal.png</file>
         <file>res/lv_crown.png</file>
+        <file>res/control/defaultimage.png</file>
+        <file>res/main_title_setting_button.png</file>
+        <file>res/main_title_setting_button_press.png</file>
+
     </qresource>
 </RCC>
